# nifty_data

./: .gitignore  .~lock.PROJECT STOCK MARKET ANALYTICS-PHASES.docx#  .~lock.PROJECT STOCK MARKET ANALYTICS-PHASES.odt#  Dummy_Twitter_Data_Generator.py  PROJECT STOCK MARKET ANALYTICS-PHASES.docx  PROJECT STOCK MARKET ANALYTICS-PHASES.odt  Project Background & Objectives.pptx  Project_Presentation.pptx  README.md  financial-markets.ipynb  markets-return.csv  markets.csv  markets_with_returns.csv  nifty_oc.csv  phase1.ipynb  phase2.ipynb  phase3.ipynb  phase4.ipynb  phase5.ipynb  presentation_guidelines.py  pull-financial-data.py  pull-financial-full.py  requirements.txt
Datasets/: DJI.csv  GDAXI.csv  HSI.csv  NSEI.csv
basic-navigation/: Market_Analysis_Presentation.pptx  README_PRESENTATION.md  app.py  phase1.py  phase2.py  phase3.py  phase4.py  phase5.py  presentation.py  pyproject.toml  requirements.txt  requirements_presentation.txt  shared.py
basic-navigation/Datasets/: markets_with_returns.csv
basic-navigation/rsconnect-python/: basic-navigation.json
basic-navigation/www/: styles.css
